infra/contour/manifests/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: contour
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  controllerName: projectcontour.io/gateway-controller
