infra/contour/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: projectcontour
  annotations:
    argocd.argoproj.io/sync-wave: "1"
