infra/contour/manifests/envoy-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: projectcontour
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    metallb.universe.tf/address-pool: default-pool
    metallb.universe.tf/loadBalancerIPs: 10.89.0.200
  labels:
    metallb.universe.tf/allow-shared-ip: "true"
spec:
  type: LoadBalancer
  selector:
    app: envoy
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
