infra/contour/manifests/patch-envoy-to-nodeport.yaml
# Patch Envoy service from LoadBalancer to NodePort for Kind port mappings
apiVersion: v1
kind: Service
metadata:
  name: envoy-contour
  namespace: projectcontour
spec:
  type: NodePort
  ports:
  - name: http-80
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: envoy-contour
